--- a/components/Card/card.css
+++ b/components/Card/card.css
@@ -3,8 +3,13 @@
     color:#1C1824        
 } */
 
+.hover:hover {
+    background-color: white;
+    color:#1C1824 
+}
+
 .hover:hover div{
-    background-color: whitesmoke;
+    background-color: white;
     color:#1C1824 
 }
 
@@ -17,6 +22,7 @@
   }
 
 .text{
-    color: #fff696
+    color: #1C1824;
+    text-transform: uppercase
 }
 
