fix styles mobile

--- a/components/Footer/footer.css
+++ b/components/Footer/footer.css
@@ -7,15 +7,16 @@
     align-items: center;
 }
 
+.line-footer-mobile{  
+  bottom: -336px !important;
+}
+
 .line-footer {
     width: 100%;
     height: 2px;
     position: absolute;
     overflow: hidden;
     bottom: 49px;
-    @media (max-width: 768px) {
-      bottom: -336px !important;
-    }
   }
   
   .line-footer span {
@@ -55,7 +56,12 @@
     background-image: linear-gradient(to right, #007723, #007723 33.33%, white 33.33%, white 66.67%, #c90003 66.67%);
     position: absolute;
     bottom: 2px;
-    @media (max-width: 768px) {
-      bottom: -380px !important;
-    }
+  }
+  
+  .border-bottom-footer-mobile {
+    width: 116px;
+    height: 4px;
+    background-image: linear-gradient(to right, #007723, #007723 33.33%, white 33.33%, white 66.67%, #c90003 66.67%);
+    position: absolute;
+    bottom: -380px;
   }
