added component order

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,4 @@
 @import '../components/Header/header.css';
 @import '../components/Card/card.css';
 @import '../components/Footer/footer.css';
+@import '../components/Order/order.css';
