added open or close market

--- a/components/Card/card.css
+++ b/components/Card/card.css
@@ -3,7 +3,7 @@
     color:#1C1824        
 } */
 
-.hover:hover {
+/* .hover:hover {
     background-color: white;
     color:#1C1824 
 }
@@ -11,7 +11,7 @@
 .hover:hover div{
     background-color: white;
     color:#1C1824 
-}
+} */
 
 .hover:hover{
     color:#1C1824
