--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,7 +31,7 @@ overflow:hidden;
 
 .icon-container {
   width: 125px;
-  height: 100px;
+  height: 105px;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -48,14 +48,14 @@ overflow:hidden;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 2.5s infinite linear alternate;
-  animation: move 2.5s infinite linear alternate;
+  -webkit-animation: move 3.5s infinite linear alternate;
+  animation: move 3.5s infinite linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
   font-weight: 600;
   color: #008000;
-  border: 1px solid gray;
+  border: 2px solid rgba(1, 170, 55, 0.6);
   border-right: unset;
   padding: 14px;
   
@@ -70,14 +70,14 @@ overflow:hidden;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 2.5s infinite linear alternate;
-  animation: move 2.5s infinite linear alternate;
+  -webkit-animation: move 3.5s infinite linear alternate;
+  animation: move 3.5s infinite linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
   font-weight: 600;
   color: #f44336;
-  border: 1px solid gray;
+  border: 2px solid rgba(255, 99, 71, 0.8);
   border-right: unset;
   padding: 14px;
 
@@ -88,7 +88,7 @@ overflow:hidden;
     transform: translateX(0);
   }
   50% {
-    transform: translateX(40px);
+    transform: translateX(110px);
   }
   100% {
     transform: translateX(0);
