--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,7 +30,7 @@ overflow:hidden;
 }
 
 .icon-container {
-  width: 125px;
+  width: 135px;
   height: 105px;
   position: relative;
   overflow: hidden;
@@ -48,8 +48,8 @@ overflow:hidden;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 4.5s infinite linear alternate;
-  animation: move 4.5s infinite linear alternate;
+  -webkit-animation: move 4s infinite linear alternate;
+  animation: move 4s infinite linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
@@ -66,12 +66,12 @@ overflow:hidden;
   height: fit-content;
   position: absolute;
   top: 50%;
-  /* left: 10%; */
+  left: 15%;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 4.5s infinite linear alternate;
-  animation: move 4.5s infinite linear alternate;
+  -webkit-animation: move 4s infinite linear alternate;
+  animation: move 4s infinite linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
@@ -88,7 +88,7 @@ overflow:hidden;
     transform: translateX(0);
   }
   50% {
-    transform: translateX(105px);
+    transform: translateX(110px);
   }
   100% {
     transform: translateX(0);
