--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,12 +44,12 @@ overflow:hidden;
   height: fit-content;
   position: absolute;
   top: 55%;
-  left: 5%;
+  left: 10%;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 4.5s infinite linear alternate;
-  animation: move 4.5s infinite linear alternate;
+  -webkit-animation: move 5.5s alternate linear alternate;
+  animation: move 5.5s alternate linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
@@ -70,8 +70,8 @@ overflow:hidden;
   transform: translate(-50%, -50%);
   /* background-color: #000; */
   border-radius: 12px 0px 0px 12px;
-  -webkit-animation: move 4.5s infinite linear alternate;
-  animation: move 4.5s infinite linear alternate;
+  -webkit-animation: borderAnimation 2.5s infinite linear alternate;
+  animation: borderAnimation 2.5s infinite linear alternate;
   font-size: 24px;
   font-family: monospace;
   line-height: 15px;
@@ -80,7 +80,12 @@ overflow:hidden;
   border: 2px solid rgba(202, 12, 3, 0.6);
   border-right: unset;
   padding: 14px;
-
+  
+}
+.paused{
+  animation-play-state: paused;
+  transform: translateX(0);
+  animation: borderAnimation 2s infinite alternate;
 }
 
 @keyframes move {
@@ -88,10 +93,19 @@ overflow:hidden;
     transform: translateX(0);
   }
   50% {
-    transform: translateX(100px);
+    transform: translateX(30px);
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+@keyframes borderAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(20px);
   }
 }
 
